@@ -1,5 +1,8 @@
 Added support for Members version 2.0+; moved the capabilities to a new Gravity Flow group with human readable labels.
 Added the gravityflow_step_assignees filter.
+Added PATCH to the list of request methods in the request method setting of the Outgoing Webhook step settings.
+Added Headers to the Outgoing Webhook step settings.
+Added the Raw body setting to the OUtgoing webhook step settings.
 Fixed an issue populating multi-select fields with the existing entry value on the user input step when the field uses the new json storageType.
 Fixed the $original_entry parameter not being passed when the gform_after_update_entry hook is triggered on entry update by the user input step.
 Fixed empty fields being displayed on the user input step when 'show empty fields' was not enabled.
